# zkllvm-blueprint

./: CMakeLists.txt
.github/workflows/: run_tests_linux.yml  run_tests_mac.yml
include/nil/blueprint/benchmarks/: circuit_generator.hpp
test/: CMakeLists.txt  test_plonk_component.hpp
test/benchmarks/: scaling_bench.cpp
